tests/errors/syn_method6.java
public class syn_method6 {
public static String main ( ) {

}